name:                hashsearch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hashsearch#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hashsearch
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , process-extras
                     , text
                     , directory
                     , filepath
                     , vector
                     , mtl
                     , monad-logger
                     , hashable
                     , bytestring
