name:                hashsearch
version:             0.1.0.0
synopsis:            Efficiently deduplicate image collections
-- description:
homepage:            https://github.com/infinisil/hashsearch#readme
license:             BSD3
license-file:        LICENSE
author:              Silvan Mosberger
maintainer:          infinisil@icloud.com
copyright:           2018 Silvan Mosberger
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hashsearch
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Hashing
                       Config
  ghc-options:         -threaded -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , process-extras
                     , directory
                     , filepath
                     , vector
                     , mtl
                     , monad-logger
                     , blockhash
                     , JuicyPixels
                     , memory
                     , bytestring
                     , conduit
                     , broadcast-chan-conduit
                     , bktrees
                     , optparse-applicative
